force-app/main/default/objects/WeatherInfo__c/fields/Feels_Like__c.field-meta.xml
<CustomField>
    <fullName>Feels_Like__c</fullName>
    <label>Feels Like</label>
    <length>10</length>
    <type>Text</type>
</CustomField>