force-app/main/default/objects/WeatherInfo__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>