force-app/main/default/objects/WeatherInfo__c/fields/Maximum_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Temperature__c</fullName>
    <label>Maximum Temperature</label>
    <length>10</length>
    <type>Text</type>
</CustomField>