force-app/main/default/objects/WeatherInfo__c/fields/Minimum_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Temperature__c</fullName>
    <label>Minimum Temperature</label>
    <length>10</length>
    <type>Text</type>
</CustomField>