force-app/main/default/objects/WeatherInfo__c/fields/temperature__c.field-meta.xml
<CustomField>
    <fullName>temperature__c</fullName>
    <label>temperature</label>
    <length>10</length>
    <type>Text</type>
</CustomField>